# Ai-documents-structuring-extractor

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt
templates/: index.html
