[project]
name = "fastapi-render-tutorial"
version = "0.1.0"
description = "A simple FastAPI tutorial for deploying to Render"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.0",
    "pandas==2.2.3",
    "PyPDF2==3.0.1",
    "python-dotenv==1.0.1",
    "google-generativeai==0.7.2",
]
